@@ -43,6 +43,10 @@ indexpage:
 #
     - title: "Hybrid Cloud Database Solutions"
       links:
+        - title: "Oracle RAC Deployment and Protection in VCF with vVols"
+          url: /vcf_ora_rac_vvol.html
+        - title: "Oracle SI Deployment and Protection in VCF with vVols"
+          url: /vcf_ora_si_vvol.html
         - title: "Simplified, Automated Oracle Deployment on NetApp C-Series with NFS"
           url: /automation_ora_c-series_nfs.html
         - title: "Simplified, Automated Oracle Deployment on NetApp ASA with iSCSI"
