@@ -56,6 +56,8 @@ entries:
 
       - title: "On-Premises/Hybrid Cloud"
         entries:
+          - title: "Oracle RAC Deployment and Protection in VCF with vVols"
+            url: /databases/vcf_ora_rac_vvol.html
           - title: "Oracle SI Deployment and Protection in VCF with vVols"
             url: /databases/vcf_ora_si_vvol.html
           - title: "Simplified, Automated Oracle Deployment on NetApp C-Series with NFS" 
