@@ -1,6 +1,6 @@
 ---
 sidebar: sidebar
-permalink: databases/vcf_ora_si_vvol.html
+permalink: databases/vcf_ora_rac_vvol.html
 keywords: Database, Oracle, AWS, FSx ONTAP, VMC, VMware
 summary: "The solution provides an overview and details for Oracle deployment and protection in VMware Cloud Foundation (VCF) with vSphere Virtual Volumes (vVols) as primary database storage and Oracle database in Real Application Clusters (RAC) configuration." 
 ---
