@@ -4,6 +4,9 @@
 | *Date* | *Solution Area* | *Description of change*
 // end::header[]
 // tag::ent-db[]
+| 08/23/2024 | Database | New TR-4997: Oracle RAC Deployment and Protection in VCF with vVols
+// end::ent-db[]
+// tag::ent-db[]
 | 07/31/2024 | Database | New TR-4996: Oracle SI Deployment and Protection in VCF with vVols
 // end::ent-db[]
 // tag::ent-db[]
